--- a/index.html
+++ b/index.html
@@ -73,12 +73,31 @@
             <h1 class="h1_portfolie reveal">
                 GRUNDLÆGGENDE WEB
             </h1>
+
+            <h3 class="h3_portfolie">Under temaet grundlæggende web lærte vi om designprincipper, gestaltprincipper,
+                farver og kontraster.
+                Jeg lærte at lave
+                moodboards, skitsering, mock ups og style tile. Indenfor kode delen lærte vi at kode responsivt design
+                og arbejdede med
+                mobile first tilgang. Der blev brugt CSS grid og media queries. Alle disse ting brugte jeg i mine to
+                projekter under
+                dette tema. Nedenfor står der tydeligere beskrevet til hvert projekt.
+            </h3>
         </div>
 
         <h2 class="h2_portfolie reveal">Website</h2>
         <div class="two_columns reveal">
             <div class="column1 reveal">
-                <p class="reveal"> bla bla</p>
+                <p class="reveal"> Websiteopgaven bestod af, at arbejde videre på et tidligere projekt som kun virkede
+                    på mobilsite. Jeg har i denne opgave
+                    arbejdet videre på sitet så det virkede på desktop. Sidens indhold er lavet ud fra et udleveret
+                    wireframe, layoutdiagram
+                    samt tekst og billeder. Den primære farve på dette site er grøn og er altså den gennemgående farve
+                    på websitet. Menuen
+                    har en lysere grøn farve end baggrunden som skaber opmærksomhed til menuen. De sekundære farver på
+                    sitet er lysegrøn og
+                    den gule til h2 overskrifterne.
+                </p>
             </div>
             <div class="portfolie_img  reveal">
                 <img src="img/website.png" alt="website">
@@ -88,19 +107,29 @@
         <h2 class="h2_portfolie reveal">Emnesite</h2>
         <div class="two_columns reveal">
             <div class="column1 reveal">
-                <p class="reveal"> Under forløbet Grundlæggende Web lærte vi ... Temaopgaven bestod af, at designe og
-                    lave mit eget site om et valgtfit emne. Her valgte jeg at lave en site om mine yndlings blomster.
-                    Til denne site valgte jeg stilarten modernisme og herunder minimalisme. Min komposition består
-                    derfor at få elementer og et stærkt blikfandt med mine billeder og stor header. Udtrykket er
-                    harmonisk med simple former og rene kontrastfulde farver, minimalistisk med et dramatisk brug af
-                    typografi. Gestaltlovene kommer også til udtryk på mit site, blandt andet gennem loven om
-                    kontinuitet som jeg bruger med linjer som adskiller min tekst og billede. Loven om nærhed er også
-                    til stede hvis man kigger på placeringen af mine overskrifter og tekst nedenunder. Dette hjælper
-                    brugeres til at opfatte elementerne som relateret til hinanden. Sitet er opbygget med grids for
-                    effektivt at kunne organisere mit indhold, uden at skulle tilføje ekstra visuelle elementer.
-                    Billederne er på samme måde, som resten af sitet forsøgt at holde minimalistisk og enkle. Dette
-                    relaterer sig også til loven om lighed ved at alle mine sites ligner hinanden, med samme former,
-                    farver og størrelser.</p>
+                <p class="reveal"> Temaopgaven bestod af, at designe og lave mit eget site om et valgfrit emne. Her
+                    valgte jeg at lave en site om mine
+                    yndlings blomster. Til denne site valgte jeg stilarten modernisme og herunder minimalisme. Min
+                    komposition består derfor
+                    at få elementer og et stærkt blikfandt med mine billeder og stor header. Udtrykket er harmonisk med
+                    simple former og
+                    rene kontrastfulde farver, minimalistisk med et dramatisk brug af typografi. Gestaltlovene kommer
+                    også til udtryk på mit
+                    site, blandt andet gennem loven om kontinuitet som jeg bruger med linjer som adskiller min tekst og
+                    billede. Loven om
+                    nærhed er også til stede hvis man kigger på placeringen af mine overskrifter og tekst nedenunder.
+                    Dette hjælper brugeres
+                    til at opfatte elementerne som relateret til hinanden. Sitet er opbygget med grids for effektivt at
+                    kunne organisere mit
+                    indhold, uden at skulle tilføje ekstra visuelle elementer. Billederne er på samme måde, som resten
+                    af sitet forsøgt at
+                    holde minimalistisk og enkle. Dette relaterer sig også til loven om lighed ved at alle mine sites
+                    ligner hinanden, med
+                    samme former, farver og størrelser. Jeg valgte bevidst at alle mine tekster skulle stå med små
+                    bogstaver, da jeg synes
+                    det gik godt hånd i hånd med resten af mit site. Det var med til at underbygge den minimalistiske
+                    stil sitet har.
+                </p>
             </div>
             <div class="portfolie_img  reveal">
                 <img src="img/emnesite_1.png" alt="">
@@ -114,12 +143,53 @@
             <h1 class="h1_portfolie reveal">
                 GRUNDLÆGGENDE UX
             </h1>
+
+            <h3 class="h3_portfolie">Under temaet grundlæggende UX kom vi nærmere på udviklingen af digitale
+                brugergrænseflader. Temaet gav mig en
+                grundlæggende forståelse for samspillet mellem brugere og brugergrænseflader, samt hvilke teorier,
+                værktøjer og metoder
+                jeg kunne bruge til research, design og test til en digital produktudvikling.
+
+            </h3>
         </div>
 
-        <h2 class="h2_portfolie reveal">Løsning</h2>
+        <h2 class="h2_portfolie reveal">Løsning og pitch</h2>
         <div class="two_columns reveal">
             <div class="column1 reveal">
-                <p class="reveal"> bla bla </p>
+                <p class="reveal"> Temaopgaven under grundlæggende UX bestod af at designe en webshop, der sælger
+                    t-shirts. Fokusset for opgaven var
+                    brugergrænsefladen og brugeroplevelsen altså design af UI og UX-elementer til min webshop. Jeg
+                    brugte forskellige
+                    researchmetoder til min indsamling af data. Jeg gjorde både brug af, desk research , observation,
+                    interview og survey
+                    for at undersøge mit område nærmere. De forskellige research metoder var alle med til at give mig et
+                    dybere indblik på
+                    mit område og var med til at påvirke min udarbejdelse af mit koncept. Mit koncept bestod af at sælge
+                    basic unisex tøj.
+                    Afsenderen på sitet er to unge kvinder fra København, som så et mangel på markedet og startede deres
+                    eget lille firma.
+                    Målgruppen til sitet består af både kvinder og mænd i alderen 12-30 år gammel. Det er alle nogle
+                    individer som stræber
+                    efter en tidsløs garderobe, som består af elementer som de kan bruge igen og igen. Min målgruppe
+                    ligger til baggrund fra
+                    blandt andet min observation, hvor jeg observerede at det ikke kun var det ene eller det andet køn,
+                    som gik i basic
+                    fashion. Ved hjælp af min survey kom jeg også frem til, at et flertal lagde mest vægt på at købe
+                    basic varer end at købe
+                    statement pieces. Produkterne til siden består af t-shirt, sweatshirt og poloer. Under alle
+                    produkter kan man vælge
+                    hvilket fit produktet skal have og hvilken farve. At kunne vælge hvordan den skal fitte var et
+                    bevidst valg, da jeg
+                    under min research fandt ud af, at mange allerede ejer basic t-shirt men at de ikke sidder præcis
+                    som man ønsker og
+                    derfor ikke bliver brugt tilstrækkeligt nok. Min USP lyder derfor også som følgende: Basic t-shirts,
+                    sweatshirt og
+                    poloer i lige præcis det fit du vil have og den farve du ønsker. Mit site er med til at spare folk
+                    for at søge
+                    internettet rundt for at finde lige præcis den rigtige trøje, med det rigtige fit. På mit site kan
+                    man få de basic varer
+                    man ønsker, i det fit og den rigtige farve man ønsker.
+                </p>
             </div>
             <div class="portfolie_img reveal">
                 <img src="img/loesning_1.png" alt="">
@@ -134,17 +204,33 @@
             <h1 class="h1_portfolie reveal">
                 GRUNDLÆGGENDE ANIMATION
             </h1>
+
+            <h3 class="h3_portfolie">Under temaet grundlæggende animation blev jeg introduceret til JavaScript. Det blev
+                i dette tema brugt sammen med css
+                animationer, hvor jeg skabte et spil. Jeg kom nærmere på spildesign og Adobe Illustrator. Under arbejdet
+                med spillet
+                lærte jeg at arbejde med aktivitets- og statemachine diagrammer, som jeg brugte til at planlægge flowet
+                til spillet.
+
+            </h3>
         </div>
 
         <h2 class="h2_portfolie reveal">Temaopgave</h2>
         <div class="two_columns reveal">
             <div class="column1 reveal">
-                <p class="reveal"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia eveniet corporis
-                    nostrum voluptatibus
-                    autem voluptas dicta soluta officia accusamus, commodi, ipsa, nulla veritatis sit reiciendis
-                    quo.
-                    Saepe
-                    dicta magnam porro!</p>
+                <p class="reveal"> Temaopgaven under grundlæggende animation bestod af at lave et interaktivt animeret
+                    spil, som jeg selv har designet og
+                    programmeret. Udover spillet så indeholder hjemmesiden også min dokumentation af spillet. Dette
+                    indebærer både min ide,
+                    det tekniske som aktivitetsdiagram og statemachine diagram og mit grafik. I ide/konceptfasen lavede
+                    jeg en papirs
+                    prototype og skitserede. Undervejs kom jeg tættere på mit endelig design og gik i gang med at
+                    designe UI og spil
+                    elementerne. Stilen på mit spil er kendetegnet ved flat design, da mine elementer er enkle med en
+                    minimalistisk
+                    tegnestil. Jeg har brugt lyse farver, simple former, få detaljer, minimale teksturer og en let
+                    læselig skrift.
+                </p>
             </div>
             <div class="portfolie_img reveal">
                 <img src="img/temaopgave_1.png" alt="">
@@ -158,17 +244,30 @@
             <h1 class="h1_portfolie reveal">
                 GRUNDLÆGGENDE INDHOLD
             </h1>
+
+            <h3 class="h3_portfolie">Teamet grundlæggende indhold gav mig en grundlæggende forståelse for
+                videoproduktion, forarbejdet inden optagelsen,
+                selve optagelsen og postproduktion. Dette brugte jeg i min redesign opgave som jeg lavede i samarbejde
+                med min gruppe.
+                Her brugte vi både video produktion og færdigheder som vi blev præsenteret for i de tidligere temaer.
+
+
+            </h3>
         </div>
 
         <h2 class="h2_portfolie reveal">Pilotsite</h2>
         <div class="two_columns reveal">
             <div class="column1 reveal">
-                <p class="reveal"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia eveniet corporis
-                    nostrum voluptatibus
-                    autem voluptas dicta soluta officia accusamus, commodi, ipsa, nulla veritatis sit reiciendis
-                    quo.
-                    Saepe
-                    dicta magnam porro!</p>
+                <p class="reveal"> Pilotsitet bestod af, at jeg skulle præsentere min video jeg optog med min gruppe men
+                    redigerede individuelt. Sidens
+                    design er klassisk og rent. På siden møder man ved første øjekast min video som jeg har redigeret.
+                    Det første billede på
+                    videoen er sort hvid, men med en lys og fangede gul skrift til at bryde fokusset og fange brugerens
+                    opmærksomhed til
+                    teksten. Denne stil fortsætter når man scroller ned af siden, med billeder fra location som også er
+                    sort og hvid. Dette
+                    valgte jeg for at holde siden klassisk og minimalistisk.
+                </p>
             </div>
             <div class="portfolie_img reveal">
                 <img src="img/pilotsite.png" alt="">
@@ -178,7 +277,22 @@
         <h2 class="h2_portfolie reveal">Redesign</h2>
         <div class="two_columns reveal">
             <div class="column1 reveal">
-                <p class="reveal"> bla bla</p>
+                <p class="reveal"> Redesign opgaven lavede jeg i samarbejde med 3 andre fra holdet. Vi valgte at
+                    redesigne Tealicious - et bubbletea firma
+                    - egen hjemmeside. Vi brugte researchmetoder fra grundlæggende UX tema 3, hvor vi undersøgte
+                    virksomhedens nuværende
+                    website og koncept. Brandet fokuserer på bubbletea og snacks og har en målgruppe på unge mellem
+                    12-30. Tealicious prøver
+                    gennem deres hjemmeside at fortælle om bubbletea og at det er sjovt og lækkert. I vores idéudvikling
+                    fokuserede vi på at
+                    gøre hjemmesiden nemmere tilgængelig, sammenhængende og sjov. Vi lavede wireframes, moodboards og et
+                    styletile. Vi
+                    holdte fast i det meste af det originale copy, vi fokuserede mest på at ændre tonen i copy og gøre
+                    den sjovere og mere i
+                    øjenhøjde med de kunder de har. Microcopy ændrede vi en del på, da vi ville forsøge at gøre
+                    hjemmesiden mere klar og
+                    præcis.
+                </p>
             </div>
             <div class="portfolie_img reveal">
                 <img src="img/redesign_1.png" alt="">
