--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/qnl3pma.css">
     <link rel="stylesheet" href="https://use.typekit.net/qnl3pma.css">
     <link rel="stylesheet" href="https://use.typekit.net/qnl3pma.css">
+    <link rel="stylesheet" href="https://use.typekit.net/qnl3pma.css">
 
     <link rel="stylesheet" href="style.css">
     <title>Forside</title>
@@ -33,8 +34,8 @@
     </header>
 
     <section>
-        <div class="h1_forside">
-            <h1>Første semester<br>på KEA</h1>
+        <div class="h1_forside outline">
+            <h1>PORT<br>FOLIO</h1>
         </div>
     </section>
     <div class="h2_forside">
