--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
     <div class="h2_forside">
         <h2>Louise Krejler</h2>
     </div>
+    <div class="vertical-text">2022</div>
+    <div class="vertical-text2">2022</div>
 
 
     <div class="scroll">
@@ -99,10 +101,15 @@
                     sitet er lysegrøn og
                     den gule til h2 overskrifterne.
                 </p>
+                <a href="">
+                    <button class="knap">Se mere</button>
+                </a>
+
             </div>
             <div class="portfolie_img  reveal">
                 <img src="img/website.png" alt="website">
             </div>
+
 
         </div>
         <h2 class="h2_portfolie reveal">Emnesite</h2>
@@ -131,9 +138,13 @@
                     det gik godt hånd i hånd med resten af mit site. Det var med til at underbygge den minimalistiske
                     stil sitet har.
                 </p>
+
+                <a href="">
+                    <button class="knap">Se mere</button>
+                </a>
             </div>
             <div class="portfolie_img  reveal">
-                <img src="img/emnesite_1.png" alt="">
+                <img src="img/emnesite_3.png" alt="">
             </div>
 
 
@@ -191,6 +202,10 @@
                     man få de basic varer
                     man ønsker, i det fit og den rigtige farve man ønsker.
                 </p>
+
+                <a href="">
+                    <button class="knap">Se mere</button>
+                </a>
             </div>
             <div class="portfolie_img reveal">
                 <img src="img/loesning_1.png" alt="">
@@ -232,6 +247,9 @@
                     tegnestil. Jeg har brugt lyse farver, simple former, få detaljer, minimale teksturer og en let
                     læselig skrift.
                 </p>
+                <a href="">
+                    <button class="knap">Se mere</button>
+                </a>
             </div>
             <div class="portfolie_img reveal">
                 <img src="img/temaopgave_1.png" alt="">
@@ -269,6 +287,9 @@
                     sort og hvid. Dette
                     valgte jeg for at holde siden klassisk og minimalistisk.
                 </p>
+                <a href="">
+                    <button class="knap">Se mere</button>
+                </a>
             </div>
             <div class="portfolie_img reveal">
                 <img src="img/pilotsite.png" alt="">
@@ -294,6 +315,9 @@
                     hjemmesiden mere klar og
                     præcis.
                 </p>
+                <a href="">
+                    <button class="knap">Se mere</button>
+                </a>
             </div>
             <div class="portfolie_img reveal">
                 <img src="img/redesign_1.png" alt="">
@@ -319,6 +343,9 @@
                     quo.
                     Saepe
                     dicta magnam porro!</p>
+                <a href="">
+                    <button class="knap">Se mere</button>
+                </a>
             </div>
             <div class="portfolie_img reveal">
                 <img src="img/portfolio.png" alt="">
