--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
                     sitet er lysegrøn og
                     den gule til h2 overskrifterne.
                 </p>
+                <a href="https://louisekrejler.dk/kea/02_web/01_website/website/index.html">
+                    <button class="knap">Link til site</button>
+                </a>
                 <a href="">
                     <button class="knap">Se mere</button>
                 </a>
@@ -139,8 +142,10 @@
                     stil sitet har.
                 </p>
 
-                <a href="">
-                    <button class="knap">Se mere</button>
+                <a class="knap" href="https://louisekrejler.dk/kea/02_web/02_emnesite/emnesite/" target="_blank"> Link
+                    til site
+                </a>
+                <a class="knap" href=""> Se mere
                 </a>
             </div>
             <div class="portfolie_img  reveal">
@@ -203,8 +208,11 @@
                     man ønsker, i det fit og den rigtige farve man ønsker.
                 </p>
 
-                <a href="">
-                    <button class="knap">Se mere</button>
+                <a class="knap" href="https://xd.adobe.com/view/9344f7a1-7e6b-4041-b59b-421332295c74-c617/?fullscreen"
+                    target="_blank"> Link
+                    til site
+                </a>
+                <a class="knap" href=""> Se mere
                 </a>
             </div>
             <div class="portfolie_img reveal">
@@ -247,8 +255,10 @@
                     tegnestil. Jeg har brugt lyse farver, simple former, få detaljer, minimale teksturer og en let
                     læselig skrift.
                 </p>
-                <a href="">
-                    <button class="knap">Se mere</button>
+                <a class="knap" href="https://louisekrejler.dk/kea/04_animation/website/spil.html" target="_blank"> Link
+                    til site
+                </a>
+                <a class="knap" href=""> Se mere
                 </a>
             </div>
             <div class="portfolie_img reveal">
@@ -287,8 +297,10 @@
                     sort og hvid. Dette
                     valgte jeg for at holde siden klassisk og minimalistisk.
                 </p>
-                <a href="">
-                    <button class="knap">Se mere</button>
+                <a class="knap" href="https://loui47p3.github.io/pilotsite/" target="_blank"> Link
+                    til site
+                </a>
+                <a class="knap" href=""> Se mere
                 </a>
             </div>
             <div class="portfolie_img reveal">
@@ -315,8 +327,10 @@
                     hjemmesiden mere klar og
                     præcis.
                 </p>
-                <a href="">
-                    <button class="knap">Se mere</button>
+                <a class="knap" href="https://juli81n7.github.io/tealicious/" target="_blank"> Link
+                    til site
+                </a>
+                <a class="knap" href=""> Se mere
                 </a>
             </div>
             <div class="portfolie_img reveal">
@@ -343,8 +357,10 @@
                     quo.
                     Saepe
                     dicta magnam porro!</p>
-                <a href="">
-                    <button class="knap">Se mere</button>
+                <a class="knap" href="https://louisekrejler.dk/kea/02_web/02_emnesite/emnesite/" target="_blank"> Link
+                    til site
+                </a>
+                <a class="knap" href=""> Se mere
                 </a>
             </div>
             <div class="portfolie_img reveal">
