--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <header>
         <div class="logo">
-            <a href="index.html"><img src="img/logo.png" alt="logo" /></a>
+            <a href="index.html"><img class="img_logo" src="img/favicon.svg" alt=""></a>
         </div>
         <nav class="menu_container">
             <button class="menu_button">Menu</button>
@@ -101,11 +101,13 @@
                     sitet er lysegrøn og
                     den gule til h2 overskrifterne.
                 </p>
-                <a href="https://louisekrejler.dk/kea/02_web/01_website/website/index.html">
-                    <button class="knap">Link til site</button>
+
+                <a class="knap" href="https://louisekrejler.dk/kea/02_web/01_website/website/index.html"
+                    target="_blank"> Link
+                    til site
                 </a>
-                <a href="">
-                    <button class="knap">Se mere</button>
+                <a class="knap" href="https://xd.adobe.com/view/b03566cb-04f8-4b13-aa9a-2527e008577f-e566/"
+                    target="_blank"> Se mere
                 </a>
 
             </div>
@@ -145,7 +147,8 @@
                 <a class="knap" href="https://louisekrejler.dk/kea/02_web/02_emnesite/emnesite/" target="_blank"> Link
                     til site
                 </a>
-                <a class="knap" href=""> Se mere
+                <a class="knap" href="https://xd.adobe.com/view/817cf2bd-eeff-4e20-abf9-4477a254e74a-d42f/"
+                    target="_blank"> Se mere
                 </a>
             </div>
             <div class="portfolie_img  reveal">
@@ -212,7 +215,8 @@
                     target="_blank"> Link
                     til site
                 </a>
-                <a class="knap" href=""> Se mere
+                <a class="knap" href="https://xd.adobe.com/view/77deaee9-91f7-46d7-bb26-571195f2e837-228d/"
+                    target="_blank"> Pitch
                 </a>
             </div>
             <div class="portfolie_img reveal">
@@ -258,8 +262,7 @@
                 <a class="knap" href="https://louisekrejler.dk/kea/04_animation/website/spil.html" target="_blank"> Link
                     til site
                 </a>
-                <a class="knap" href=""> Se mere
-                </a>
+
             </div>
             <div class="portfolie_img reveal">
                 <img src="img/temaopgave_1.png" alt="">
@@ -300,7 +303,8 @@
                 <a class="knap" href="https://loui47p3.github.io/pilotsite/" target="_blank"> Link
                     til site
                 </a>
-                <a class="knap" href=""> Se mere
+                <a class="knap" href="https://www.youtube.com/watch?v=X2jR8YoYQQo&ab_channel=LouiseKrejler"
+                    target="_blank"> Se video
                 </a>
             </div>
             <div class="portfolie_img reveal">
@@ -330,7 +334,8 @@
                 <a class="knap" href="https://juli81n7.github.io/tealicious/" target="_blank"> Link
                     til site
                 </a>
-                <a class="knap" href=""> Se mere
+                <a class="knap" href="https://xd.adobe.com/view/043e5222-b72a-47fd-bf02-d905639d518e-516d/"
+                    target="_blank"> Se mere
                 </a>
             </div>
             <div class="portfolie_img reveal">
@@ -360,7 +365,8 @@
                 <a class="knap" href="https://louisekrejler.dk/kea/02_web/02_emnesite/emnesite/" target="_blank"> Link
                     til site
                 </a>
-                <a class="knap" href=""> Se mere
+                <a class="knap" href="https://louisekrejler.dk/kea/02_web/02_emnesite/emnesite/" target="_blank"> Link
+                    til site
                 </a>
             </div>
             <div class="portfolie_img reveal">
