--- a/index.html
+++ b/index.html
@@ -17,21 +17,39 @@
 <body>
 
     <header>
-        <div class="logo">
-            <a href="index.html"><img class="img_logo" src="img/favicon.svg" alt=""></a>
-        </div>
-        <nav class="menu_container">
-            <button class="menu_button">Menu</button>
-            <ul class="menu">
-                <li><a href="#mig" id="mig_menu">Om mig</a></li>
-                <li><a href="#web" id="web_menu">Web</a></li>
-                <li><a href="#ux" id="ux_menu">UX</a></li>
-                <li><a href="#animation" id="animation_menu">Animation</a></li>
-                <li><a href="#indhold" id="indhold_menu">Indhold</a></li>
-                <li><a href="#portfolio" id="portfolio_menu">Portfolie</a></li>
+        <nav class="navbar">
+            <a href="index.html" class="nav-branding">LK</a>
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a class="nav-link" href="#mig">Om mig</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#web">Web</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#ux">UX</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#animation">Animation</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#indhold">Indhold</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#portfolio">Portfolio</a>
+                </li>
             </ul>
+            <div class="hamburger">
+                <span class="bar1"></span>
+                <span class="bar2"></span>
+                <span class="bar3"></span>
+            </div>
         </nav>
     </header>
+
+
+
+
 
     <section>
         <div class="h1_forside outline">
