--- a/index.html
+++ b/index.html
@@ -48,9 +48,6 @@
     </header>
 
 
-
-
-
     <section>
         <div class="h1_forside outline">
             <h1>PORT<br>FOLIO</h1>
@@ -62,9 +59,8 @@
     <div class="vertical-text">2022</div>
     <div class="vertical-text2">2022</div>
 
-
-    <div class="scroll">
-        <div id="mig" class="reveal">
+    <div id="mig" class="scroll">
+        <div class=" reveal">
             <h1 class="h1_portfolie_mig reveal">
                 Om mig
             </h1>
@@ -90,7 +86,10 @@
             </div>
         </div>
 
-        <div id="web" class="reveal">
+        <div id="web">
+        </div>
+
+        <div class="reveal">
             <h1 class="h1_portfolie reveal">
                 GRUNDLÆGGENDE WEB
             </h1>
@@ -177,7 +176,11 @@
         </div>
         <img class="portfolie_img reveal" src="img/emnesite_2.png" alt="">
 
-        <div id="ux" class="scrolling_text reveal">
+
+        <div id="ux">
+        </div>
+
+        <div class="scrolling_text reveal">
             <h1 class="h1_portfolie reveal">
                 GRUNDLÆGGENDE UX
             </h1>
@@ -246,7 +249,10 @@
             <img src="img/loesning_2.png" alt="">
         </div>
 
-        <div id="animation" class="scrolling_text reveal">
+        <div id="animation">
+        </div>
+
+        <div class="scrolling_text reveal">
             <h1 class="h1_portfolie reveal">
                 GRUNDLÆGGENDE ANIMATION
             </h1>
@@ -290,7 +296,10 @@
             <img src="img/temaopgave_2.png" alt="">
         </div>
 
-        <div id="indhold" class="scrolling_text reveal">
+        <div id="indhold">
+        </div>
+
+        <div class="scrolling_text reveal">
             <h1 class="h1_portfolie reveal">
                 GRUNDLÆGGENDE INDHOLD
             </h1>
@@ -391,6 +400,7 @@
                 <img src="img/portfolio.png" alt="">
             </div>
         </div>
+
 
     </div>
 
